<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/pet_avatar"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentLeft="true"
            android:layout_height="90dp"
            android:layout_width="90dp" />

        <TextView
            android:id="@+id/pet_name"
            android:layout_toRightOf="@+id/pet_avatar"
            android:text="@string/nick_name"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <LinearLayout
            android:layout_below="@+id/pet_name"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_alignLeft="@+id/pet_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/pet_breed"
                    android:layout_height="30dp"
                    android:background="#828282"
                    android:textColor="@android:color/white"
                    android:text="Dog"
                    android:gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:text="@string/breed"
                    android:layout_height="30dp"
                    android:background="#CFCFCF"
                    android:gravity="center"
                    android:layout_width="match_parent" />
            </LinearLayout>
            <ImageView
                android:background="@android:color/white"
                android:layout_height="match_parent"
                android:layout_width="1dp" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/pet_age"
                    android:layout_height="30dp"
                    android:background="#828282"
                    android:textColor="@android:color/white"
                    android:text="2"
                    android:gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:text="@string/age"
                    android:layout_height="30dp"
                    android:background="#CFCFCF"
                    android:gravity="center"
                    android:layout_width="match_parent" />
            </LinearLayout>
            <ImageView
                android:background="@android:color/white"
                android:layout_height="match_parent"
                android:layout_width="1dp" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/pet_height"
                    android:layout_height="30dp"
                    android:background="#828282"
                    android:textColor="@android:color/white"
                    android:text="20cm"
                    android:gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:text="@string/body_height"
                    android:layout_height="30dp"
                    android:background="#CFCFCF"
                    android:gravity="center"
                    android:layout_width="match_parent" />
            </LinearLayout>
            <ImageView
                android:background="@android:color/white"
                android:layout_height="match_parent"
                android:layout_width="1dp" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/pet_weight"
                    android:layout_height="30dp"
                    android:background="#828282"
                    android:textColor="@android:color/white"
                    android:text="200g"
                    android:gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:text="@string/body_weight"
                    android:layout_height="30dp"
                    android:background="#CFCFCF"
                    android:gravity="center"
                    android:layout_width="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioGroup
            android:id="@+id/tab_group"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_height="40dp"
            android:layout_width="match_parent">
            <RadioButton
                android:id="@+id/tab_today"
                android:layout_weight="1"
                android:text="@string/today"
                android:gravity="center"
                android:layout_height="match_parent"
                android:button="@null"
                android:checked="true"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_pet_stat_tab"
                android:layout_width="match_parent" />
            <RadioButton
                android:id="@+id/tab_history"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history"
                android:button="@null"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_pet_stat_tab"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
        </RadioGroup>
        <RelativeLayout
            android:id="@+id/chart"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/health_and_diet"
        android:layout_height="40dp"
        android:background="@drawable/gray"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent" />
</LinearLayout>